카테고리 삭제, 구독버튼 기능 활성, 채널 메인 글 목록 불러오기 성공, 게시글 내용 불러오기 성공

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,4 @@
 
-
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/project_board
@@ -20,7 +18,6 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
 
-
   h2:
     console:
       enabled: false
@@ -35,6 +32,9 @@ spring:
 
   thymeleaf3:
     decoupled-logic: true
+  mvc:
+    favicon:
+      enabled: false
 
 logging:
   level:
